apps/demo-app/deploy/test/greeting-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeting-service
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - greeting-service.demo-app.test.k3s.gillouche.homelab
  rules:
  - host: greeting-service.demo-app.test.k3s.gillouche.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: greeting-service
            port:
              number: 80
