apps/demo-app/deploy/test/infra-check-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-check-service
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: infra-check-test.gillouche.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-check-service
                port:
                  number: 8080
  tls:
    - hosts:
        - infra-check-test.gillouche.homelab
      secretName: homelab-tls
